objects/Complete_Account_Snapshot__c.object
<CustomObject>
    <description>Includes cancelled Accounts</description>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Complete Account Snapshots</relationshipLabel>
        <relationshipName>Complete_Account_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carrier_Count__c</fullName>
        <label>Carrier Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exchange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sliced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Snapshot_Number__c</fullName>
        <label>Snapshot Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Complete Account Snapshot</label>
    <nameField>
        <label>Complete Account Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Complete Account Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>